--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "webpack-merge": "^2.3.1"
   },
   "dependencies": {
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.18.2",
     "express": "^4.14.0",
+    "json-parser": "^1.1.5",
     "node-find-files": "0.0.4",
     "node-uuid": "^1.4.7"
   }
