--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project",
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
+    "start": "node server.js",
     "startDev": "node server.js",
     "build": "NODE_ENV=production node_modules/.bin/webpack",
     "watch": "NODE_ENV=dev node_modules/.bin/webpack --watch",
