--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.14.0",
+    "fs": "^0.0.1-security",
     "json-parser": "^1.1.5",
     "node-find-files": "0.0.4",
     "node-uuid": "^1.4.7"
