add comments & frisby tests

--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "chokidar": "^1.6.1",
-    "frisby": "^0.8.5",
+    "frisby": "^2.0",
     "html-webpack-plugin": "^2.26.0",
     "jasmine-node": "^1.14.5",
+    "jest": "^22.1.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.1",
