--- a/front/my-app/public/manifest.json
+++ b/front/my-app/public/manifest.json
@@ -12,4 +12,10 @@
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
+  "permissions": [
+    "*://developer.mozilla.org/*",
+    "webRequest",
+    "http://localhost:/*",
+    "http://localhost:3000/*"
+  ]
 }
